--- a/main.css
+++ b/main.css
@@ -153,7 +153,18 @@ body{
 	background-repeat: no-repeat;
 	float:right;
 	position: relative;
-	bottom:150px;
+	bottom:155px;
+	z-index: 7;
+}
+.drinkRibbon{
+	height:80px;
+	width:100px;
+	background-image:url("http://www.clker.com/cliparts/h/4/S/x/2/J/drunk-owl-md.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	float:right;
+	position: relative;
+	bottom:155px;
 	z-index: 7;
 }
 .postContent{
@@ -163,6 +174,7 @@ body{
 	float:left;
 	font-family: 'Karla', sans-serif;
 	margin-top:50px;
+	margin-left: 100px;
 	width:800px;
 }
 .commentTitle{
