--- a/main.css
+++ b/main.css
@@ -75,8 +75,8 @@ body{
 }
 #stumptownPic{
 	float: left;
-	margin-right: 50px;
-	margin-bottom: 50px;
+	margin-right: 30px;
+	margin-bottom: 10px;
 }
 .postTitle{
 	font-family: 'Karla', sans-serif;
@@ -164,7 +164,7 @@ body{
 	background-repeat: no-repeat;
 	float:right;
 	position: relative;
-	bottom:155px;
+	bottom:160px;
 	z-index: 7;
 }
 .postContent{
@@ -179,9 +179,11 @@ body{
 }
 .commentTitle{
 	font-weight: bold;
+	font-size: 20px;
 	float:left;
 	width: 500px;
 	clear:all;
+	margin-bottom: 20px;
 }
 .fb-comments{
 	float:left;
